--- a/styles.css
+++ b/styles.css
@@ -31,14 +31,33 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: start;
-  /*max-width: 60vw;
-  */background-color: var(--dark-blue);
-  padding: 40px;
-  border-radius: 20px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
+  background: rgb(37, 45, 55);
+  background: -moz-radial-gradient(
+    circle at top,
+    rgba(37, 45, 55, 1) 0%,
+    rgba(23, 30, 40, 1) 100%
+  );
+  background: -webkit-radial-gradient(
+    circle at top,
+    rgba(37, 45, 55, 1) 0%,
+    rgba(23, 30, 40, 1) 100%
+  );
+  background: radial-gradient(
+    circle at top,
+    rgba(37, 45, 55, 1) 0%,
+    rgba(23, 30, 40, 1) 100%
+  );
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#252d37",endColorstr="#171e28",GradientType=1);
+  padding: 35px;
+  border-radius: 40px;
+}
+
+.star-icon {
+  margin-bottom: 16px;
+  background-color: var(--dark-blue);
+  border-radius: 50%;
+  width: 18px;
+  padding: 16px;
 }
 
 .heading h1 {
@@ -63,10 +82,9 @@ form {
   width: 100%;
 }
 
-
 @media screen and (min-width: 1440px) {
   main {
-    max-width: 25vw;
+    max-width: 18vw;
   }
 }
 @media screen and (max-width: 1440px) {
