--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,11 @@
   --dark-blue: hsl(213, 19%, 18%);
   --very-dark-blue: hsl(216, 12%, 8%);
 }
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 body {
   width: 100vw;
@@ -53,6 +58,7 @@ main {
 }
 
 .star-icon {
+  box-sizing: content-box;
   margin-bottom: 16px;
   background-color: var(--dark-blue);
   border-radius: 50%;
@@ -66,11 +72,86 @@ main {
 .heading p {
   margin-top: 6px;
   color: var(--light-grey);
+  line-height: 1.5em;
 }
 
 form {
   width: 100%;
   text-align: center;
+}
+
+.rating-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 16px;
+}
+.rating-box input {
+  -webkit-appearance: none;
+  appearance: none;
+  margin: 0;
+  display: none;
+}
+.rating-box input:checked + label {
+  border-radius: 50%;
+  background-color: var(--orange);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  color: var(--white);
+}
+
+.rating-box label {
+  background-color: var(--dark-blue);
+  cursor: pointer;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--medium-grey);
+  font-size: 18px;
+}
+.rating-box label:hover {
+  background-color: var(--medium-grey);
+  color: var(--white);
+}
+
+form button[type="submit"] {
+  width: 100%;
+  padding: 12px;
+  margin-top: 16px;
+  border-radius: 24px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  -ms-border-radius: 24px;
+  -o-border-radius: 24px;
+  border: none;
+  background-color: var(--orange);
+  color: var(--white);
+  cursor: pointer;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+  font-size: 18px;
+}
+form button[type="submit"]:hover {
+  background-color: var(--white);
+  color: var(--orange);
 }
 
 .attribution {
@@ -82,13 +163,47 @@ form {
   width: 100%;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1600px) {
   main {
-    max-width: 18vw;
+    max-width: 20vw;
   }
 }
-@media screen and (max-width: 1440px) {
+@media screen and (max-width: 1600px) {
   main {
-    max-width: 40vw;
+    max-width: 30vw;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  main {
+    max-width: 60vw;
+  }
+}
+@media screen and (max-width: 600px) {
+  .star-icon {
+    width: 14px;
+    padding: 12px;
+  }
+  main {
+    max-width: 90vw;
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -moz-border-radius: 16px;
+    -ms-border-radius: 16px;
+    -o-border-radius: 16px;
+    padding: 24px;
+  }
+  .heading h1 {
+    font-size: 24px;
+    margin-top: 0;
+  }
+  .heading p {
+    font-size: 14px;
+  }
+
+  .rating-box label {
+    width: 35px;
+    height: 35px;
+    font-size: 14px;
   }
 }
