--- a/styles.css
+++ b/styles.css
@@ -142,16 +142,19 @@ form button[type="submit"] {
   background-color: var(--orange);
   color: var(--white);
   cursor: pointer;
-  transition: .3s;
-  -webkit-transition: .3s;
-  -moz-transition: .3s;
-  -ms-transition: .3s;
-  -o-transition: .3s;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
   font-size: 18px;
 }
 form button[type="submit"]:hover {
   background-color: var(--white);
   color: var(--orange);
+}
+form button[type="submit"]:active {
+  background-color: rgb(92, 92, 92);
 }
 
 .attribution {
@@ -161,6 +164,9 @@ form button[type="submit"]:hover {
   position: absolute;
   bottom: 10px;
   width: 100%;
+}
+.attribution a {
+  color: var(--orange);
 }
 
 @media screen and (min-width: 1600px) {
