--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,6 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
   background: rgb(37, 45, 55);
   background: -moz-radial-gradient(
     circle at top,
@@ -53,8 +52,11 @@ main {
     rgba(23, 30, 40, 1) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#252d37",endColorstr="#171e28",GradientType=1);
-  padding: 35px;
   border-radius: 40px;
+}
+.rating {
+  align-items: start;
+  padding: 35px;
 }
 
 .star-icon {
@@ -157,6 +159,36 @@ form button[type="submit"]:active {
   background-color: rgb(92, 92, 92);
 }
 
+.thank-you {
+  align-items: center;
+  text-align: center;
+  padding: 40px 30px;
+}
+
+.selected-rating {
+  width: fit-content;
+  margin: auto;
+  margin-top: 18px;
+  color: var(--orange);
+  background-color: var(--dark-blue);
+  padding: 6px 18px;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  -ms-border-radius: 30px;
+  -o-border-radius: 30px;
+}
+
+.thank-you h1 {
+  margin-bottom: 12px;
+  margin-top: 36px;
+}
+
+.thank-you p {
+  color: var(--light-grey);
+  letter-spacing: 0.5px;
+}
+
 .attribution {
   font-size: 12px;
   color: var(--light-grey);
@@ -211,5 +243,25 @@ form button[type="submit"]:active {
     width: 35px;
     height: 35px;
     font-size: 14px;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    display: none;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    display: none;
+  }
+  100% {
+    opacity: 1;
   }
 }
